Copyright (C) 2022 LANNOCC (Shawn A. Wilson)
@%@~LICENSE:MIT~@%@

saw_061822_2 - Fixing previous commit for Windows.

saw_061822_1 - Save window size/position.

saw_061722_3 - Improved window behavior and organization.

saw_061722_2 - Testing pyglet with pystray.

saw_061722_1 - Just getting started.
