@@ -1,6 +1,8 @@
 Copyright (C) 2022 LANNOCC (Shawn A. Wilson)
 @%@~LICENSE:MIT~@%@
 
+saw_061822_3 - More window shenanigans.
+
 saw_061822_2 - Fixing previous commit for Windows.
 
 saw_061822_1 - Save window size/position.
